<resources>
    <string name="app_name">My First App</string>
    <string name="hello_world">Hello World USJ!</string>
    <string name="userName">Xabier</string>
    <string name="userPhone">666666666</string>
    <string name="userEmail">usj@usj.es</string>
    <string name="tob">ToB</string>
    <string name="toc">TOC</string>
    <string name="to_a">To A</string>
    <string name="send_email">Send email</string>
    <string name="call">Call</string>
    <string name="finish">Finish</string>
    <string name="insert_a_value">Insert a value</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="company">company</string>
    <string name="init_operation">init operation</string>
    <string name="citizen">citizen</string>
    <string name="company_id">Company ID</string>
    <string name="Citizen">Citizen</string>
    <string name="Company">Company</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="to">To</string>
    <string name="send">Send</string>
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="init_citizen">Init Citizen</string>

    <string-array name="country_array">
        <item>France</item>
        <item>Spain</item>
        <item>USA</item>
        <item>England</item>
        <item>Germany</item>
        <item>Portugal</item>
    </string-array>

</resources>
