<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityC">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_a"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="189dp" />

    <Button
        android:id="@+id/btnToEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="281dp" />

    <Button
        android:id="@+id/btnToCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="380dp" />
</androidx.constraintlayout.widget.ConstraintLayout>